--- a/meu-primeiro-projeto/src/app/app.component.html
+++ b/meu-primeiro-projeto/src/app/app.component.html
@@ -1,14 +1,56 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<app-datepicker-popup></app-datepicker-popup>
 
-  <div class="jumbotron">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <div style="text-align:center">
+
+  <div class="container">
+    <div class="alert alert-primary" role="alert">
+        Seu nome é {{nome}}!
+    </div>
+    <div class="form-group">
+        <label>Nome</label>
+        <input type="text" class="form-control" #nomeInput (input) = " nome = $event.target.value" >
+    </div>
+    <button type="button" class="btn btn-primary" (click)="salvar(nomeInput.value)" [disabled] = 'nome.length==0'>Salvar</button>
+    <app-footer></app-footer>
+</div> -->
+
+  <!-- <div class="jumbotron">
     <app-head class="display-4"></app-head>
     <app-content class="lead"></app-content>
     <app-footer></app-footer>
+    <div class="alert alert-primary" role="alert">
+      <strong>primary</strong>
+    </div>
     <p class="lead">
       <a class="btn btn-primary btn-lg" href="https://www.behance.net/erissonnunes" role="button">Veja meu Portfólio</a>
     </p>
-  </div>
+  </div> -->
 
 
 <!--   
