--- a/meu-segundo-projeto/src/app/core/edit-user/edit-user.component.html
+++ b/meu-segundo-projeto/src/app/core/edit-user/edit-user.component.html
@@ -1,6 +1,6 @@
 <h2>Edit User</h2>
 <hr>
-<form>
+<form (ngSubmit)="onSubmit()"> 
     
     <div class="form-group">
       <label for="login">Login</label>
@@ -38,6 +38,6 @@
       [(ngModel)]="user.password">
     </div>
   
-    <button type="submit" class="btn btn-primary">Register</button>
+    <button type="submit" class="btn btn-primary">Update</button>
   
   </form>
