Primeiro trabalho da segunda nota sem a função editar produto

--- a/meu-segundo-projeto/src/app/app.component.html
+++ b/meu-segundo-projeto/src/app/app.component.html
@@ -1,4 +1,27 @@
+
+<!-- Erisson Bezerra Nunes -- 402876 -->
+<!-- Nathalia Rebeca de Paiva Pinto -- 402788 -->
+
+
 <nav class="navbar navbar-expand navbar-dark bg-dark">
+  <div class="navbar-nav">
+    <a class="nav-item nav-link" routerLink="registrar/produto">Registrar produto</a>
+    <a class="nav-item nav-link" routerLink="listar/produto">Listar produtos</a>
+  </div>
+</nav>
+
+<div class="jumbotron">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6 offset-sm-3">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!-- <nav class="navbar navbar-expand navbar-dark bg-dark">
     <div class="navbar-nav">
       <a class="nav-item nav-link" routerLink="register/user">Register</a>
       <a class="nav-item nav-link" routerLink="list/user">List</a>
@@ -13,7 +36,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
 
 
